add sprint 6 tasks

--- a/docs/de-de/modules/auftraege/pages/auftragstypen-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftragstypen-testphase.adoc
@@ -8,7 +8,7 @@
 Folgende Auftragstypen gibt es in plentymarkets:
  * xref:auftraege:auftraege-verwalten.adoc#[Auftrag]
  * xref:auftraege:auftraege-verwalten.adoc#240[Angebot]
- * xref:auftraege:auftraege-verwalten.adoc#1100[Vorbestellung]
+ * xref:auftraege:auftraege-verwalten.adoc#1100[Vorbestellung] noch hinzufügen
  * xref:auftraege:auftraege-verwalten.adoc#600[Gewährleistung]
  * xref:auftraege:auftraege-verwalten.adoc#500[Gutschrift]
  * <</auftraege/auftraege-verwalten#300, Lieferauftrag>>
@@ -19,12 +19,12 @@ Folgende Auftragstypen gibt es in plentymarkets:
 
  siehe: auftraege-testphase.adoc
 Auftragsdokumente: team-docs-automation
-////
 
 == Auftrag [Beta]
 Unter: Einrichtung - Aufträge - Auftragstypen - Auftrag [Beta]
 
-
+// TODO: einheitlich für alle: rechts icon:settings[set=material] *Spalten konfigurieren* und Mülleimer (tooltip fehlt). Durch Klick auf icon:delete[set=material] geht der Artikel zurück in die Auswahl.
+////
 
 == Lieferauftrag
 
@@ -41,7 +41,7 @@ Gehe folgendermaßen vor, um einen Lieferauftrag anzulegen:
 . Nimm die Einstellungen anhand <<table-xxx>> vor.
 . *Speichere* (icon:save[role="green"]) die Einstellungen. +
 → Der Lieferauftrag wird angelegt und in einem eigenen Fenster geöffnet.
-// TODO: table suchen/anlegen; Schritte für automatisch und best. Positionen
+// TODO: table suchen/anlegen; Schritte für automatisch und ausgewählte Positionen
 
 
 Einstellungen für Aufträge in Lieferaufträge splitten
@@ -96,6 +96,7 @@ Im Menü *Einrichtung » Aufträge » Einstellungen* muss zwingend für die xref
 ====
 // TODO: xref anpassen
 
+
 [#edit-orders-and-delivery-orders]
 === Haupt- und Lieferaufträge bearbeiten
 
@@ -140,8 +141,8 @@ Lieferaufträge manuell anlegen:
 . Klicke in den Auftrag, für den du einen Lieferauftrag anlegen möchtest.
 . Klicke auf icon:shopping_cart[set=material] und wähle den Auftragstyp *Lieferauftrag*.
 . Wähle die Option *Für bestimmte Positionen*. +
-→ Der Lieferauftrag wird angelegt und erscheint in der Seitennavigation links als Neuer Lieferauftrag.
-. Wiederhole bei Bedarf den Prozess, um weitere Lieferaufträge anzulegen.
+→ Der Lieferauftrag wird angelegt und erscheint in der Seitennavigation links als *Neuer Lieferauftrag*.
+. Wiederhole bei Bedarf die Schritte, um weitere Lieferaufträge anzulegen.
 
 
 [#create-delivery-orders-automatically]
@@ -168,12 +169,11 @@ Lieferaufträge automatisch anlegen
 . Wiederhole den Prozess, um be Bedarf weitere Lieferaufträge anzulegen.
 
 ////
-nach Rücksprache mit Patrick Beispiele weiterhin nutzbar
+nach Rücksprache mit Patrick derzeitige Beispiele weiterhin nutzbar
 Hier die Beispiele einfügen
 [#create-delivery-order-via-ea] 
 === Lieferaufträge per Ereignisaktion anlegen
 ////
-
 
 
 == Angebot
@@ -203,10 +203,10 @@ Neues Angebot anlegen:
 . Wähle einen Kontakt und klicke auf icon:more_vert[set=material], um das Kontextmenü zu öffnen.
 . Wähle den Kontakt, zu dem du ein *Neues Angebot [Beta]* erstellen möchtest.
 → ein neues Fenster öffnet sich.
-Level 1:
+Level 1: Einstellungen
 Level 2: durch Icon Aufklappen kannst du das 2. Level *Auftragspositionen* aufklappen.
-
 // TODO: ausformulieren
+
 [[table-settings-new-offer]]
 .Neues Angebot
 [cols="1,3"]
@@ -220,9 +220,10 @@ Level 2: durch Icon Aufklappen kannst du das 2. Level *Auftragspositionen* aufkl
 Rechts daneben siehst du Name und ID.
 
 | *Auftragsvorlage*
-|Voreingestellt ist Kunde. ??
+|Voreingestellt ist Kunde.
 
-2+^| *Auftragsdetails*
+
+2+^| *Auftragspositionen*
 
 | *Rechnungsadresse*
 |Angezeigt wird die *Rechnungsadresse*. +
@@ -265,31 +266,32 @@ graues Sternchen = Pflichtfeld
 graues Sternchen = Pflichtfeld
 |====
 
-// TODO: ausformulieren
+// TODO: ausformulieren/korrigieren/Icons
 Button "Pfeil Artikel hinzufügen"
 Das Fenster schließt sich.
 
-Rechts oben erscheint danach icon:shopping_cart[set=material], daneben mit weißer Zahl in blauem Kreis Anzahl der Artikel. Wenn du darauf klickst, öffnet sich der Warenkorb als Side cart.
+Rechts oben erscheint danach icon:shopping_cart[set=material], daneben mit weißer Zahl in blauem Kreis Anzahl der Artikel. Wenn du darauf klickst, öffnet sich der Warenkorb als *Side cart*.
 
-Der Warenkorb zeigt folgende Informationen:
-Bild
-Artikelname
-Code ??
-Preisauswahl mit Dropdown
-Preis
-Menge
-*Auftragspositionseigenschaften* über Icon Stift zu bearbeiten.
-Klicke auf den Stift, um die Eigenschaften zu bearbeiten: Name, Wert, Aufpreis.
-Eigenschaft währlen (Dropdown)
-Über Icon Plus kannst du *Eigenschaft hinzufügen*. Durch Eigenschaften speichern kannst du die Änderungen sichern.
-Über Icon roter Kreis minus kannst du *Artikel löschen*.
+Der Warenkorb zeigt dir folgende Informationen:
+* Bild
+* Artikelname
+* Barcode
+* Preisauswahl (Dropdown)
+* Preis
+* Menge
+
+Du kannst die *Auftragspositionseigenschaften* über icon:edit[set=material] bearbeiten.
+. Klicke auf icon:edit[set=material] *Bearbeiten*, um folgende Eigenschaften zu bearbeiten: Name, Wert, Aufpreis.
+. Wähle eine Eigenschaft (Dropdown).
+. Über icon:add[set=material] *Hinzufügen* kannst du eine *Eigenschaft hinzufügen*. 
+. Klicke auf icon:save[set=material] *Speichern*, um die Änderungen zu speichern.
+. Über Icon roter Kreis minus ?? kannst du *Artikel löschen*.
 Aufpreis, Rabatt, Summe pro Artikel
-
 Aufpreis gesamt
 Zwischensumme
-gelb hinterlegt Icon *Verkaufpreis aktualsieren*.
 
-Durch Klick auf x im schwarzen Kreis kannst du den Warenkorb schließen.
+. Über Icon gelb hinterlegt ?? kannst du den *Verkaufpreis aktualisieren*.
+. Klicke auf Icon x im schwarzen Kreis, um den Warenkorb zu schließen.
 
 
 
@@ -330,7 +332,7 @@ Retourengründe eingeben:
 [#enter-status-returns]
 === Status für retournierte Artikel eintragen
 
-Du kannst bis zu 12 Artikelstatus anlegen. Die Status kannst du z.B. nutzen, um einerseits den Zustand der retournierten Artikel, aber auch um den Fortschritt beim Bearbeiten der retournierten Artikel anzugeben. Die Status stehen in einer Retoure im Portlet *Übersicht* bei den Auftragspositionen zur Wahl. Um je nach Fortschritt der Bearbeitung verschiedene Status zuzuweisen, lege die benötigten Status an. Du kannst Retourenstatus in mehreren Sprachen hinterlegen.
+Du kannst bis zu 12 Artikelstatus anlegen. Die Status kannst du z.B. nutzen, um einerseits den Zustand der retournierten Artikel, aber auch um den Fortschritt beim Bearbeiten der retournierten Artikel anzugeben. Die Status stehen in einer Retoure im Bereich *Übersicht* bei den Auftragspositionen zur Wahl. Um je nach Fortschritt der Bearbeitung verschiedene Status zuzuweisen, lege die benötigten Status an. Du kannst Retourenstatus in mehreren Sprachen hinterlegen.
 
 :ordertype: Retoure
 
@@ -349,9 +351,6 @@ Hinweis: Pro Artikelposition kann ein eigener Status definiert werden.
 === Retoure erfassen und bearbeiten
 
 Eine Retoure erfasst du manuell, wenn ein Paket bei dir eingegangen ist oder du erlaubst deinen registrierten Webshop-Kund:innen, direkt im Kundenkonto des Shops Retouren anzumelden. Nachdem eine Retoure erfasst wurde, werden weitere Bearbeitungsmöglichkeiten sichtbar. So kannst du z.B. den Artikelstatus der retournierten Artikel erst nach dem Erfassen angeben.
-////
-Hinweis: Die Retourengründe (dropdown grün) werden durch die übergeordneten Retourengründe (gelb) überschrieben.
-////
 
 [.instruction]
 Gehe folgendermaßen vor, um eine Retoure zu erfassen:
@@ -526,14 +525,14 @@ Bevor Rücksendescheine erzeugt werden können, muss die Dokumentenvorlage
 // TODO:prüfen, xref prüfen
 xref:auftraege:ruecksendeschein-erzeugen.adoc#[Rücksendeschein] 
 Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Dokumente » Rücksendeschein* einrichten.
+...
 ====
 ////
 
-Prüfe die Artikelpositionen der Retoure und ändere bei Bedarf die Optionen, z.B. die Menge eines Artikels, bevor du im Tab *Belege* der Retoure einen Rücksendeschein erzeugst.
 
 // TODO: besser formulieren
 ==== Bundle handling 
-am Beispiel Retoure (für alle Kindauftragstypen)
+am Beispiel *Retoure* (für alle Kindauftragstypen)
 
 Erstellen einer Retoure für ein Artikelpaket (Bundle) 
 Im System ist ein Artikelpaket (Bundle) als ein Artikel hinterlegt, der aber aufgesplittet wird, wenn du ihn in den Warenkorb legt. Der Preis ist mit diesem Artikel verknüpft. Die Komponenten werde als separate Artikel hinzugefügt und haben einen eigenen Typ. Du kannst daher nur entweder das Bundle oder die einzelnen Komponenten in den Warenkorb legen. 
@@ -545,9 +544,8 @@ Je nachdem, welche Option du wählst, wird icon:shopping_cart[set=material] *Zum
 **Artikelpakete** bestehen aus mehreren Einzelartikeln. Für diese Pakete wird in plentymarkets kein eigener Warenbestand geführt. Der Bestand der Artikelpakete richtet sich nach dem Bestand der darin enthaltenen Artikel. Wird ein Artikelpaket verkauft, werden die darin enthaltenen Artikel automatisch in den reservierten Bestand übernommen. +
 *_Hinweis:_* Damit ein Paket verfügbar ist, müssen dessen Bestandteile im selben Lager liegen.
 
+
 == Reparatur
-
-
 
 [#use-order-type-repair]
 === Auftragstyp Reparatur nutzen
@@ -587,6 +585,7 @@ Zustände für Reparaturen eingeben:
 . Wiederhole dies ggf. für weitere Sprachen.
 *_Hinweis:_* Pro Artikelposition kann ein eigener Zustand definiert werden. Es können bis zu 15 Artikelzustände eingegeben werden.
 
+
 [#create-repair]
 === Reparatur anlegen
 
@@ -598,28 +597,28 @@ Gehe folgendermaßen vor, um eine Reparatur anzulegen:
 → Die Auftragsübersicht öffnet sich.
 . Suche (icon:search[role="blue"]) anhand der Filtereinstellungen nach der Retoure, für den eine Reparatur angelegt werden soll.
 . Öffne die *Retoure*, für die eine Reparatur angelegt werden soll.
-. Klicke auf (icon:shopping_cart[set=material]) *Aufträge erstellen*, um auf die Auswahl zu gelangen. Es öffnet sich ein .... Wähle *Reparatur*, um eine Reparatur anzulegen.
+. Klicke auf (icon:shopping_cart[set=material]) *Aufträge erstellen*, um auf die Auswahl zu gelangen.
+. Wähle *Reparatur*, um eine Reparatur anzulegen.
 . Wähle *Für bestimmte Positionen*.  +
 → Ein Bearbeitungsfenster wird geöffnet.
 . Nimm die Einstellungen anhand <<table-xxx>> vor.
 . *Speichere* (icon:save[role="green"]) die Einstellungen. +
 → Die Reparatur wird angelegt und in einem neuen Fenster geöffnet.
-. Wähle einen *Status*. Voreingestellt ist *12 Reparatur*. Dies ist ein Pflichtfeld (Icon Sternchen). Über die Dropdown-Liste kann ein abweichender Status gewählt werden.
-. Wähle einen *Eigner* über die Dropdown-Liste. Dies ist ein Pflichtfeld (Icon Sternchen).
+. Wähle einen *Status*. Voreingestellt ist *12 Reparatur*. Dies ist ein Pflichtfeld (Sternchen). Über die Dropdown-Liste kann ein abweichender Status gewählt werden.
+. Wähle einen *Eigner* über die Dropdown-Liste. Dies ist ein Pflichtfeld (Sternchen).
 . Wähle einen *Status der Reparatur* über die Dropdown-Liste. 
 
 . *Speichere* (icon:save[role="green"]) die Einstellungen. +
-Die *Neue Reparatur* wird in der Seitennavigation links unter Auftragsreferenzen in blauer Schrift angezeigt. Öffne darüber das Portlet Auftragsrefenrenzen.
+Die *Neue Reparatur* wird in der Seitennavigation links unter Auftragsreferenzen in blauer Schrift angezeigt. Öffne darüber den Bereich *Auftragsrefenrenzen*.
 
 
 [#edit-repair]
 === Reparatur bearbeiten
-// TODO: Portlet prüfen
+
 Je nach Grund der Rücksendung oder Zustand der zu reparierenden Artikel müssen bei der Bearbeitung verschiedene Schritte durchgeführt werden. +
-Da es sich bei einer Reparatur um einen eigenen Auftragstyp handelt, kannst du über Detailansicht über Portlet *Übersicht* durch Klick auf icon:shopping_cart[set=material] der Reparatur entweder eine Gutschrift, eine Gewährleistung oder eine Retoure anlegen. Die jeweils nötigen Schritte wie die Dokumentenerzeugung, Buchungen des Warenausgangs oder -eingangs oder der eventuellen Buchung von Zahlungen sind jeweils identisch mit denen der Auftragstypen xref:auftraege:auftraege-verwalten.adoc#500[Gutschrift], xref:auftraege:auftraege-verwalten.adoc#600[Gewährleistung] und xref:auftraege:auftraege-verwalten.adoc#400[Retoure] ab.
+Da es sich bei einer Reparatur um einen eigenen Auftragstyp handelt, kannst du über Detailansicht über den Bereich *Übersicht* durch Klick auf icon:shopping_cart[set=material] der Reparatur entweder eine *Gutschrift*, eine *Gewährleistung* oder eine *Retoure* anlegen. Die jeweils nötigen Schritte wie die Dokumentenerzeugung, Buchungen des Warenausgangs oder -eingangs oder der eventuellen Buchung von Zahlungen sind jeweils identisch mit denen der Auftragstypen xref:auftraege:auftraege-verwalten.adoc#500[Gutschrift], xref:auftraege:auftraege-verwalten.adoc#600[Gewährleistung] und xref:auftraege:auftraege-verwalten.adoc#400[Retoure] ab.
 // TODO: Schritte und xref prüfen
 
-// TODO: NEU: Icon Auge Kaufabwicklung rechts neben Warenkorb
 
 [[table-settings-repair]]
 .Optionen beim Erfassen einer Reparatur
@@ -679,8 +678,9 @@ Es gibt keine Vorauswahl.
 | *Menge*
 |Die *Menge* wird angezeigt.
 
-Klicke auf icon:add_shopping_cart[set=material], um einen Artikel in den Warenkorb zu legen; 
-// TODO: Klicke links auf Icon 3 Striche plus *Füge alle offenen Mengen in den Warenkorb*
+Klicke auf icon:add_shopping_cart[set=material], um einen Artikel in den Warenkorb zu legen. 
+Klicke links auf Icon 3 Striche plus *Füge alle offenen Mengen in den Warenkorb*
+
 
 2+^| *Warenkorb*
 
@@ -727,12 +727,12 @@ Pflichtfeld Sternchen
 Über die Dropdown-Liste kann die Umsatzsteuer gewählt werden.
 
 | *Bemerkung*
-|Eine *Bemerkung* kann in das Textfeld eingefügt werden. (default) + 
+|Eine *Bemerkung* kann in das Textfeld eingefügt werden. + 
 
 | *Artikelstatus*
-|Der *Artikelstatus* wird angezeigt. (default) Es gibt keine Vorauswahl.
+|Der *Artikelstatus* wird angezeigt. Es gibt keine Vorauswahl.
 
-// TODO: Rechts icon:edit[set=material] und icon:delete[set=material]
+Rechts stehen dir die icon:edit[set=material] *Bearbeiten* und icon:delete[set=material] *Löschen* zur Verfügung.
 
 
 [#order-type-credit-note]
@@ -793,9 +793,9 @@ include::partial$tabelle-aus-optionen-anlegen.adoc[]
 Einzelne Gutschriften kannst du manuell am jeweiligen Gutschriftauftrag erzeugen. Weitere Informationen und Anleitungen zum Anlegen von Gutschriftaufträgen findest du im Kapitel xref:auftraege:auftraege-verwalten.adoc#500[Gutschrift anlegen].
 // TODO: xref prüfen
 
+// TODO: besser formulieren
 [.instruction]
 Gutschrift aus bestimmten Positionen erzeugen:
-// TODO: besser formulieren
 . Öffne das Menü *Aufträge » Aufträge [Testphase]*. +
 → Die Auftragsübersicht öffnet sich.
 . Suche (icon:search[role="blue"]) den Auftrag, für den eine Gutschrift erzeugt werden soll.
@@ -803,7 +803,7 @@ Gutschrift aus bestimmten Positionen erzeugen:
 . Klicke auf (icon:shopping_cart[set=material]) *Aufträge erstellen*. +
 . Wähle aus der Dropdown-Liste *Gutschrift* die Option *Gutschrift für bestimmte Positionen* erstellen. +
 → Die *Gutschrift* zum Auftrag wird erstellt und links in der Navigation als *Gutschrift* unter dem Auftrag angezeigt.
-. Klappe den Bereich *Historie* auf. Dort siehst du das Erstellungsdatum, den Benutzer, als Aktion Neue Gutschrift und als Status 11 Gutschrift.
+. Klappe den Bereich *Historie* auf. Dort siehst du das Erstellungsdatum, den Benutzer, als Aktion *Neue Gutschrift* und als Status 11 Gutschrift.
 
 Im Bereich *Übersicht* siehst du den Auftragstyp jetzt als Gewährleistung. Links in der Seitennavigation kann der *Auftragstyp* durch Klick auf x geschlossen werden.
 
@@ -814,9 +814,10 @@ Sollen mehrere Gutschriften zugleich erzeugt werden, kannst du ... Zudem kannst 
 Neu: sollte das so gehen wie bei Retoure auch - beschreiben.
 ////
 
+// TODO: Schritte anpassen
 [.instruction]
 Mehrere Gutschriften erzeugen:
-// TODO: stimmt noch nicht
+
 . Öffne das Menü *Aufträge » Aufträge [Testphase]* » usw*.
 . Nimm die Einstellungen anhand <<table-settings-fulfillment-credit-notes>> vor. +
 _Beachte_, dass die Einstellungen sowohl *Suchfilter* als auch *Aktionen* umfassen.
@@ -874,11 +875,10 @@ Klicke auf icon:add_shopping_cart[set=material], um weitere Artikel hinzuzufüge
 |Die Artikelposition ist editierbar.
 |====
 
+NEU: Die erstellte *Gutschrift* wird links in der Seitennavigation unter dem jeweiligen Auftrag angezeigt.
 //// 
-Tab Übersicht
-Wenn ein Gutschriftauftrag zu einem Auftrag angelegt wurde, wird im Tab *Übersicht* ?? des Haupfauftrags rechts der Hinweis *Gutschrift verfügbar* angezeigt. Zusätzlich kannst du bereits angelegte Gutschriftaufträge im Tab *Übersicht* des Hauptauftrags über die Dropdown-Liste *Gutschrift / suchen* aufrufen.
-
-Neu: Die erstellte Gutschrift wird links in der Seitennavigation unter dem jeweiligen Auftrag angezeigt.
+alte UI:
+Wenn ein Gutschriftauftrag zu einem Auftrag angelegt wurde, wird im Tab *Übersicht* des Haupfauftrags rechts der Hinweis *Gutschrift verfügbar* angezeigt. Zusätzlich kannst du bereits angelegte Gutschriftaufträge im Tab *Übersicht* des Hauptauftrags über die Dropdown-Liste *Gutschrift / suchen* aufrufen.
 ////
 
 [#create-credit-note-note]
@@ -889,7 +889,7 @@ Nach dem Anlegen des Gutschriftauftrags muss ein Gutschriftbeleg direkt im Gutsc
 Bevor du den Gutschriftbeleg des Gutschriftauftrags erzeugst, solltest du die im Gutschriftauftrag enthaltenen Auftragspositionen prüfen und bei Bedarf ändern.
 //// 
 [.instruction]
-Gutschriftbeleg erstellen:
+Gutschriftbeleg erstellen: alte UI
 
 . Öffne den Gutschriftauftrag, für den ein Gutschriftbeleg erzeugt werden soll.
 . Wähle die Option *Gutschrift* aus der Dropdown-Liste unter *Beleg / erstellen*.
@@ -985,7 +985,7 @@ Im Portlet *Historie* siehst du die Informationen:
 |Die Menge wird angezeigt. - editable with validation
 
 | *Verbleibende Stückzahl*
-|Die *Verbleibende Stückzahl* wird angezeigt.
+|Die Verbleibende Stückzahl wird angezeigt.
 
 | *Offene Menge*
 |Die Verfügbare Menge wird angezeigt.
@@ -997,8 +997,6 @@ Klicke auf icon:add_shopping_cart[set=material], um Artikel in den Warenkorb zu 
 
 
 2+^| *Warenkorb* 
-
-// TODO: einheitlich für alle: rechts icon:settings[set=material] *Spalten konfigurieren* und Mülleimer (tooltip fehlt). Durch Klick auf Mülleimer geht der Artikel zurück in die Auswahl.
 
 | *Artikel-ID*
 |Die Artikel-ID wird angezeigt.
@@ -1085,10 +1083,10 @@ Der weitere Bearbeitungsprozess läuft identisch mit dem regulären Anlegen eine
 
 [#order-type-multi-order]
 == Auftragstyp Sammelauftrag (Multi-Order) nutzen
-
+// TODO: überarbeiten
 Unbezahlte Aufträge können in einem Sammelauftrag zusammengefasst werden. Du kannst im Menü *Aufträge » Aufträge [Testphase]* oder im *???* eines Kontakts mit dem Suchfilter *Zahlungsstatus*, z.B. anhand eines Status im Bereich *[3] Warten auf Zahlung*, nach solchen unbezahlten Aufträgen suchen. Somit hast du zwei Möglichkeiten, Sammelaufträge zu erzeugen, die nachfolgend beschrieben werden.
 Für beide Möglichkeiten übernimmst du im Menü *Aufträge » ?* noch nicht bezahlte Aufträge in einen Sammelauftrag. Im Bereich *?* des Sammelauftrags ist dann das Erzeugen von Sammelrechnungen möglich.
-// TODO: überarbeiten
+
 
 //// 
 Tab *Sammelaufträge*
@@ -1149,42 +1147,58 @@ Im Menü *Einrichtung » Aufträge » Einstellungen* kannst du mit der Option xr
 // TODO: xref anpassen
 
 
-[#820]
+// TODO: auf neue UI anpassen, xref anpassen
+[#820] 
 === Sammelauftrag pro Kundenklasse anlegen
 
 Fallbeispiel: Ein Unternehmen möchte für die Mitarbeiter:innen monatlich die anfallenden Rechnungen in deinem Webshop bezahlen. Richte dafür eine eigene Kundenklasse ein. Mit der Kunden-ID in der vorgesehenen Kundenklasse wird die Rechnungsempfänger:in bestimmt. Diese Rechnungsempfänger:in erhält dann die Sammelrechnung, die direkt aus dem Sammelauftrag heraus erzeugt wird. +
 
 Einen Sammelauftrag für eine bestimmte Kundenklasse sowie einen Zeitraum legst du im Menü *Aufträge » Sammelaufträge* an. Alle unbezahlten Aufträge der Kundenklasse werden somit gesammelt in einem Sammelauftrag abgelegt. Hinterlege in den Einstellungen der Kundenklassen anhand der Option *Kunden-ID*, welche Kund:in für die Kundenklasse als Eigner des Sammelauftrags sowie als Empfänger:in der Sammelrechnung aufgeführt werden soll. Je nach Anforderung empfiehlt es sich, eigene xref:crm:kontakte-verwalten.adoc#15[Kundenklassen] für Sammelaufträge anzulegen.
-// TODO: xref anpassen
 
 [.instruction]
 Sammelauftrag für eine Kundenklasse anlegen:
 
 . Öffne das Menü *Aufträge » Sammelaufträge*.
-. Öffne das Untermenü *Sammelaufträge generieren*.
+. Klicke auf das Icon + im Kasten ?? vor *Sammelaufträge generieren*
+-> Öffne das Untermenü *Sammelaufträge generieren*.
 . Wähle die *Kundenklasse* und optional einen *Zeitraum*. Der Zeitraum bezieht sich auf das Datum des Auftragseingangs.
 . Klicke auf icon:execute[set=plenty]. +
 → Der Sammelauftrag wird angelegt.
- 
-[#830]
+
+
+[#create-multi-order-in-contacts]
 === Sammelauftrag pro Kontakt anlegen
 
 Eine Kund:in möchte nicht jede Rechnung einzeln bezahlen, sondern pro Monat oder pro Quartal bezahlen. +
-In diesem Fall legst du einen Sammelauftrag für einen bestimmten Kontakt direkt im Kontaktdatensatz im Menü *CRM » Kontakte* an. Öffne dazu einen Kontakt und wähle links im Menü die Option *Neuer Sammelauftrag*. ?? Anschließend wird automatisch ein Sammelauftrag generiert, der alle unbezahlten Aufträge des Kontakts enthält.
+In diesem Fall legst du einen Sammelauftrag für einen bestimmten Kontakt direkt im Kontaktdatensatz im Menü *CRM » Kontakte* an. Öffne dazu einen Kontakt.
+//// 
+alte UI: wähle links im Menü die Option *Neuer Sammelauftrag*. Anschließend wird automatisch ein Sammelauftrag generiert, der alle unbezahlten Aufträge des Kontakts enthält.
 // TODO: erklären lassen wie in neuer UI
-////
+
 [TIP]
 .Aufträge prüfen
 ====
 Um sicher zu gehen, dass geeignete Aufträge für die Erzeugung eines Sammelauftrags vorhanden sind, suche im Tab *Aufträge* der Kund:in nach unbezahlten Aufträgen.
 ====
+////
 
 [#840]
 === Sammelrechnung generieren
+// TODO: überarbeiten
+Die Erstellung von Sammelrechnungen ist nur in den dazugehörigen Sammelaufträgen möglich. Richte zuerst eine xref:auftraege:auftragsdokumente.adoc#[Dokumentenvorlage] für Sammelrechnungen im Menü *Einrichtung » Mandant » OrderPayment Powershop (beta) » Standorte » [Standort wählen] » Dokumente » Sammelrechnung* ein. In diesem Menü kannst du das Dokument detailliert einstellen sowie eine Dokumentenvorlage in Form einer PDF-Datei hinterlegen. In der Grundeinstellung der Vorlage sind bereits Standardwerte hinterlegt, die du bei Bedarf durch Kopie aus einer anderen Vorlage, z.B. der Dokumentenvorlage *Rechnung*, mit geringem Aufwand weiter vervollständigen kannst.
 
-Die Erstellung von Sammelrechnungen ist nur in den dazugehörigen Sammelaufträgen möglich. Richte zuerst eine xref:auftraege:auftragsdokumente.adoc#[Dokumentenvorlage] für Sammelrechnungen im Menü *Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Dokumente » Sammelrechnung* ein. In diesem Menü kannst du das Dokument detailliert einstellen sowie eine Dokumentenvorlage in Form einer PDF-Datei hinterlegen. In der Grundeinstellung der Vorlage sind bereits Standardwerte hinterlegt, die du bei Bedarf durch Kopie aus einer anderen Vorlage, z.B. der Dokumentenvorlage *Rechnung*, mit geringem Aufwand weiter vervollständigen kannst.
+Sammelrechnung
+* Grundeinstellungen: Sammelrechnung
+* Seitenränder
+* Positionierung der Pflichtelemente
+* Spalten Artikelpositionen
+* Summen
+* Optionale Elemente
+* Optionale Elemente unter Artikelpositionstabelle
 
-Anschließend kannst du im Tab *Belege* des Sammelauftrags eine Sammelrechnung generieren. Gehe dafür wie im Folgenden beschrieben vor.
+////
+siehe auch: https://knowledge.plentymarkets.com/de-de/manual/main/auftraege/best-pratices.html#_was_du_brauchst
+////
 
 [.instruction]
 Sammelrechnung erzeugen:
@@ -1193,11 +1207,13 @@ Sammelrechnung erzeugen:
 → Die Auftragsübersicht öffnet sich.
 . Suche (icon:search[role="blue"]) anhand der Filtereinstellungen den Sammelauftrag, für den eine Sammelrechnung erzeugt werden soll.
 . Öffne den Sammelauftrag.
+//// 
 . Wechsle in das Tab *Belege*. +
 . Wähle aus der Dropdown-Liste *Beleg erstellen* das Dokument *Sammelrechnung* aus. +
 . Nimm die Einstellungen anhand <<table-orders-generate-multi-invoice>> vor. +
 . *Speichere* (icon:plus-square[role="green"]) die Einstellungen, um die Sammelrechnung zu erzeugen. +
 → Es öffnet sich eine *PDF-Datei* mit der soeben erzeugten Sammelrechnung.
+////
 
 [[table-orders-generate-multi-invoice]]
 .Einstellungen für Sammelrechnungen
@@ -1229,7 +1245,7 @@ Sammelrechnung erzeugen:
 ====
 Wird eine Sammelrechnung bezahlt und der Sammelauftrag als bezahlt markiert, werden die Zahlungseingänge *nicht* automatisch an den einzelnen im Sammelauftrag zusammengefassten Aufträgen gebucht. Zahlungseingänge musst du an den einzelnen Aufträgen manuell buchen.
 ====
-
+//// 
 [.discrete]
 ==== Sammelrechnung über Ereignisaktion generieren
 
@@ -1245,14 +1261,19 @@ include::_includes:page$EA.adoc[]
 |Einstellung|Auswahl
 
 | *Ereignis*
+|
 
 | *Auftragsanlage > Neuer Sammelauftrag*
+|
 
 | *Aktion*
+|
 
 | *Dokumente > Sammelrechnung erzeugen* +
+|
 
 |====
+
 
 [#850]
 === Sammelgutschrift generieren
@@ -1417,7 +1438,8 @@ Nachricht grün hinterlegt: Auftrag erfolgreich erstellt
 |Wähle einen Eigner aus der Dropdown-Liste. +
 Angezeigt wird der aktuelle Nutzer.
 
-Über icon:playlist_add[set=material] +Füge alle offenen Mengen in den Warenkorb* kannst du...
+Über icon:playlist_add[set=material] *Füge alle offenen Mengen in den Warenkorb* kannst du mit einem Klick alle Mengen in den Warenkorb fügen.
+
 
 2+^| *Artikel*
 
@@ -1445,6 +1467,7 @@ Die *Offene Menge* zeigt dir an, wie viele Artikel nicht in den Lieferauftrag ü
 |Der Artikelname wird angezeigt.
  
 Klicke auf icon:add_shopping_cart[set=material], um weitere Artikel hinzuzufügen.
+
  
 2+^| *Warenkorb*
  
@@ -1457,18 +1480,15 @@ Klicke auf icon:add_shopping_cart[set=material], um weitere Artikel hinzuzufüge
 | *Menge*
 |Die Menge wird angezeigt. +
 Die Menge kann hier verändert werden und beliebig hoch sein.
-
-| *Artikelname*
-|Der Artikelname wird angezeigt.
-
-|====
-
 ////
 |*Menge*
 |Gib die Menge ein, in der der Artikel dem Warenkorb hinzugefügt werden soll. Du kannst nur ganze Zahlen eingeben, negative Mengen oder Mengen, die den Nettobestand übersteigen, sind nicht erlaubt. In diesem Fall wird eine Fehlernachricht angezeigt. Wenn die hinzugefügte Menge den Nettobestand auf = oder niedriger setzt, wird der Statusbalken für die Bestandsanzeige auf rot gesetzt. +
 Bei Mengenänderungen ändert sich der Verkaufspreis, daher muss der Verkaufspreis aktualisiert werden. Klicke dafür auf *Verkaufspreis aktualisieren* (icon:refresh[set=material]). Nach der Aktualisierung ist die Warenkorb-Schaltfläche (icon:add_shopping_cart[set=material]) wieder verfügbar und die Artikel können hinzugefügt werden. +
-
 ////
+
+| *Artikelname*
+|Der Artikelname wird angezeigt.
+|====
 
 
 [[table-delivery-order]]
@@ -1476,7 +1496,6 @@ Bei Mengenänderungen ändert sich der Verkaufspreis, daher muss der Verkaufspre
 [cols="1,3"]
 |====
 |Einstellung |Erläuterung
-// TODO: Text auf neue UI anpassen
 
 2+^| *Einstellungen*
 
