--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -83,6 +83,11 @@ include::_includes:page$tags-creation.adoc[]
 Wenn du Nachrichten erstellen möchtest, die über den Messenger _kostenpflichtig_ abgerechnet werden sollen, erstelle nach dem selben Schema Tags für den Bereich *Nachrichten (kostenpflichtig)*. Diese Tags musst du dann der <<#nachricht-erstellen, Nachricht>> hinzufügen.
 ====
 
+[#tag-suchen]
+==== Tags suchen
+
+include::_includes:page$tags-search.adoc[]
+
 [#assistent-durchlaufen]
 === Assistent durchlaufen
 
