--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -69,6 +69,11 @@ include::_includes:page$tags-rights.adoc[]
 
 include::_includes:page$tags-creation.adoc[]
 
+[#search-tag]
+==== Searching for tags
+
+include::_includes:page$tags-search.adoc[]
+
 [TIP]
 .Create tags for the availability *Message (billable)*
 ====
