--- a/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger-testphase.adoc
@@ -77,7 +77,7 @@ include::_includes:page$tags-search.adoc[]
 [TIP]
 .Create tags for the availability *Message (billable)*
 ====
-If you want to create messages that should be *billed* via the Messenger, you have to create tags for the availability _Message (billable)_ in the same way. You have to add these tags to the <<#create-message, message>>.
+If you want to create messages that should be <<#bill-message, billed>> via the Messenger, you have to create tags for the availability _Message (billable)_ in the same way. You have to add these tags to the <<#create-message, message>>.
 ====
 
 [#complete-assistant]
