--- a/docs/de-de/modules/crm/pages/messenger-testphase.adoc
+++ b/docs/de-de/modules/crm/pages/messenger-testphase.adoc
@@ -589,7 +589,7 @@ Konversation als erledigt markieren:
 . Öffne das Menü *CRM » Messenger (Testphase)*.
 . Klicke in der Zeile der Konversation, die du als erledigt markieren möchtest, auf icon:more_vert[set=material, role=darkGrey].
 . Klicke auf icon:circle[set=material, role=darkGrey] *Konversation als erledigt markieren*. +
-→ Am Zeilenanfang der Konversation wird das Symbol icon:task[set=material, role=skyBlue] angezeigt.
+→ Am Zeilenanfang der Konversation wird das Symbol icon:circle[set=material, role=green] angezeigt.
 
 [#kontextmenue-als-nicht-erledigt-markieren]
 ==== Konversation als nicht erledigt markieren
@@ -602,7 +602,7 @@ Konversation als nicht erledigt markieren:
 . Öffne das Menü *CRM » Messenger (Testphase)*.
 . Klicke in der Zeile der Konversation, die du als nicht erledigt markieren möchtest, auf icon:more_vert[set=material, role=darkGrey]
 . Klicke auf icon:radio_button_unchecked[set=material, role=darkGrey] *Konversation als nicht erledigt markieren*. +
-→ Am Zeilenanfang der Konversation wird das Symbol icon:task[set=material, role=skyBlue] entfernt.
+→ Am Zeilenanfang der Konversation wird das Symbol icon:circle[set=material, role=green] entfernt.
 
 [#kontextmenue-konversation-abonnieren-nicht-abonnieren]
 === Konversation abonnieren / nicht mehr abonnieren
