--- a/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
@@ -456,7 +456,7 @@ Wenn nötig Ausweichdatenfeld hinzufügen.
 [.collapseBox]
 .Was ist das?
 --
-Informationen zur Intrastat-Meldung sind erforderlich, wenn sich dein Lager außerhalb Deutschlands befindet. +
+Wenn sich dein Lager außerhalb Deutschlands befindet, sind Informationen zur Intrastat-Meldung erforderlich. +
 Gib die Länge der Variante ohne Verpackung in Zentimetern (cm) an. Runde auf volle Zentimeter auf oder ab. Wenn du auf 0 cm abrundest, gib als Wert `0` an.
 --
 | Variante
@@ -467,7 +467,7 @@ Gib die Länge der Variante ohne Verpackung in Zentimetern (cm) an. Runde auf vo
 [.collapseBox]
 .Was ist das?
 --
-Informationen zur Intrastat-Meldung sind erforderlich, wenn sich dein Lager außerhalb Deutschlands befindet. +
+Wenn sich dein Lager außerhalb Deutschlands befindet, sind Informationen zur Intrastat-Meldung erforderlich. +
 Gib die Eigenmasse der Variante in vollen Kilogramm (kg) an. Die Eigenmasse ist die Masse der Ware ohne alle Umschließungen, also das Nettogewicht. Runde auf volle Kilogramm auf oder ab. Wenn du auf 0 kg abrundest, gib als Wert `0` an.
 --
 | Variante
