--- a/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
@@ -6,7 +6,7 @@
 3+^| Produktname (für Kategorien mit "[Produktname] in [Farbe]")
 
 | Produktname +
-(_Pflichtfeld für einige Kategorien_)
+(_Pflichtfeld für bestimmte Kategorien_)
 | * *Artikeltext » Name 1*, Sprache *Deutsch*
 
 _oder_
@@ -26,7 +26,7 @@ Bei limango wird der Produktname also so angezeigt: `[Produktname] in [Farbwert]
 | Produkt
 
 | Farbwert +
-(_Pflichtfeld für einige Kategorien_)
+(_Pflichtfeld für bestimmte Kategorien_)
 | * Werte eines Attributs *Farbe*
 
 _oder_
