--- a/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
@@ -3,6 +3,40 @@
 |===
 |limango-Feld |Empfohlene Zuordnung / Anmerkungen | limango-Produktebene
 
+3+^| Produktname (für Kategorien mit "[Produktname] in [Farbe]")
+
+| Produktname +
+(_Pflichtfeld für bestimmte Kategorien_)
+| * *Artikeltext » Name 1*, Sprache *Deutsch*
+
+_oder_
+
+* *Artikeltext » Name 2*, Sprache *Deutsch*
+
+_oder_
+
+* *Artikeltext » Name 3*, Sprache *Deutsch*
+
+_oder_
+
+* Eigenschaft des Typs *Text*, Sprache *Deutsch*
+
+*_Tipp:_* Beim Export werden die Datenfelder *Produktname* und *Farbwert* dieser Gruppe miteinander kombiniert. Zwischen den beiden Datenfeldern wird automatisch das Wort `in` eingefügt. +
+Bei limango wird der Produktname also so angezeigt: `[Produktname] in [Farbwert]`
+| Produkt
+
+| Farbwert +
+(_Pflichtfeld für bestimmte Kategorien_)
+| * Werte eines Attributs *Farbe*
+
+_oder_
+
+* Werte einer Eigenschaft *Farbe* an Variante
+
+*_Tipp:_* Beim Export werden die Datenfelder *Produktname* und *Farbwert* dieser Gruppe miteinander kombiniert. Zwischen den beiden Datenfeldern wird automatisch das Wort `in` eingefügt. +
+Bei limango wird der Produktname also so angezeigt: `[Produktname] in [Farbwert]`
+| Produkt
+
 3+^| Produkte
 
 | Händler-Produkt-ID +
@@ -26,15 +60,20 @@
 
 | Produktname +
 (_Pflichtfeld_)
-| * *Artikeltext » Name 1* + Eigener Wert `in` + Werte des Attributs *Farbe*; Trennzeichen *Leerzeichen*
+| * *Artikeltext » Name 1*, Sprache *Deutsch*
 
 _oder_
 
-* *Artikeltext » Name 1* + Eigener Wert `in` + Werte einer Eigenschaft *Farbe* an Variante; Trennzeichen *Leerzeichen*
+* *Artikeltext » Name 2*, Sprache *Deutsch*
 
-image::maerkte:limango-produktname.png[]
+_oder_
 
-*_Tipp:_* Klicke ganz rechts auf *Einstellungen* ((icon:gear[])), um das Trennzeichen festzulegen.
+* *Artikeltext » Name 3*, Sprache *Deutsch*
+
+_oder_
+
+* Eigenschaft des Typs *Text*, Sprache *Deutsch*
+
 | Produkt
 
 | Kurzbeschreibung
@@ -84,6 +123,36 @@ _oder_
 * Werte einer Varianteneigenschaft *Farbe* +
 
 *_Tipp:_* Über dieses Feld teilst du limango mit, mit welchem Attribut oder mit welcher Eigenschaft du Farben pflegst. Zum Bilden der Artikelnummer wird die Farbe an die SKU gehängt. Deshalb muss die Farbe ein eindeutiger Wert sein, zum Beispiel die Herstellerfarbe. +
+| Produkt
+
+3+^| Materialzusammensetzung
+
+| Materialzusammensetzung +
+(*Ärmelfutter*; +
+*Obermaterial 3*; +
+*Obermaterial 2*; +
+*Obermaterial 1*; +
+*Membran*; +
+*Material 3* +
+etc.)
+| * Eigenschaften des Typs *Text*, Sprache *Deutsch*
+| Produkt
+
+3+^| Schuhe
+
+| Zusammensetzung Schuhe +
+*Schuhe: Obermaterial*; +
+*Schuhe: Material Innenfutter*; +
+*Schuhe: Material Decksohle*; +
+*Schuhe: Material Laufsohle*)
+| * Eigenschaften an Hauptvariante
+
+_Gültige Werte:_
+
+  ** sonstiges-material
+  ** leder
+  ** beschichtetes-leder
+  ** textil
 | Produkt
 
 3+^| Produktvarianten
@@ -251,6 +320,13 @@ image::maerkte:limango-age-group.png[]
 
 | Produkt
 
+3+^| Altgeräterücknahme nach ElektroG3
+
+| Altgeräterücknahme nach ElektroG3
+| * Eigenschaft des Typs *Text* oder *Auswahl* +
+Erlaubte Werte: *Ja*, *Nein*
+| Produkt
+
 3+^| Saison
 
 | Saison
@@ -370,6 +446,30 @@ Wenn nötig Ausweichdatenfeld hinzufügen.
 image::maerkte:limango-steuerklasse-2.png[]
 
 Wenn nötig Ausweichdatenfeld hinzufügen.
+| Variante
+
+3+^| Intrastat-Abmessungen
+
+| Länge in cm
+| * Eigenschaft des Typs *Ganze Zahl*
+
+[.collapseBox]
+.Was ist das?
+--
+Wenn sich dein Lager außerhalb Deutschlands befindet, sind Informationen zur Intrastat-Meldung erforderlich. +
+Gib die Länge der Variante ohne Verpackung in Zentimetern (cm) an. Runde auf volle Zentimeter auf oder ab. Wenn du auf 0 cm abrundest, gib als Wert `0` an.
+--
+| Variante
+
+| Gewicht in kg
+| * *Variante » Gewicht netto kg*
+
+[.collapseBox]
+.Was ist das?
+--
+Wenn sich dein Lager außerhalb Deutschlands befindet, sind Informationen zur Intrastat-Meldung erforderlich. +
+Gib die Eigenmasse der Variante in vollen Kilogramm (kg) an. Die Eigenmasse ist die Masse der Ware ohne alle Umschließungen, also das Nettogewicht. Runde auf volle Kilogramm auf oder ab. Wenn du auf 0 kg abrundest, gib als Wert `0` an.
+--
 | Variante
 
 3+^| Felder, die ohne Zuordnung übertragen werden
