--- a/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/myview-dashboard.adoc
@@ -1344,7 +1344,7 @@ Das Element *Globales Zeitintervall* kann pro Dashboard-Ansicht nur ein Mal eing
 
 Im <<#840, vorherigen Kapitel>> wurde beschrieben, wie du auf dem Dashboard angezeigte Daten für verschiedene Zeitintervalle eingrenzen kannst. 
 
-Das Element *Globale Filter* bietet dir zahlreiche weitere Möglichkeiten, Daten auf dem Dashboard übersichtlich zu filtern. Nachdem du alle Einstellungen vorgenommen hast, sind die globale Filter permanent für dich zugänglich und helfen dir so dabei, die Übersicht zu behalten. Damit ersparst du dir in vielen Anwendungsfällen, eine zusätzliche Dashboard-Ansicht anzulegen.
+Das Element *Globale Filter* bietet dir zahlreiche weitere Möglichkeiten, Daten auf dem Dashboard übersichtlich zu filtern. Nachdem du alle Einstellungen vorgenommen hast, sind die globalen Filter permanent für dich zugänglich. Diese Einstellungsmöglichkeit hilft dir dabei, die Übersicht zu behalten. Damit ersparst du dir in vielen Anwendungsfällen, eine zusätzliche Dashboard-Ansicht anzulegen.
 
 Im Folgenden lernst du, wie du das Element <<#851, auf dem Dashboard platzierst>> und einmalig im Voraus bestimmst, <<#852, welche Filter zur Verfügung stehen sollen>>. Außerdem kannst du für dein Dashboard <<#855, voreingestellte Filter>> bestimmen, sodass bei jedem Öffnen der Ansicht bereits automatisch Filter angewendet sind.
 
