--- a/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
@@ -22,7 +22,8 @@ _oder_
 * Eigenschaft des Typs *Text*, Sprache *Deutsch*
 
 *_Tipp:_* Beim Export werden die Datenfelder *Produktname* und *Farbwert* dieser Gruppe miteinander kombiniert. Zwischen den beiden Datenfeldern wird automatisch das Wort `in` eingefügt. +
-Bei limango wird der Produktname also so angezeigt: `[Produktname] in [Farbwert]`
+Bei limango wird der Produktname also so angezeigt: +
+`[Produktname] in [Farbwert]`
 | Produkt
 
 | Farbwert +
@@ -34,7 +35,8 @@ _oder_
 * Werte einer Eigenschaft *Farbe* an Variante
 
 *_Tipp:_* Beim Export werden die Datenfelder *Produktname* und *Farbwert* dieser Gruppe miteinander kombiniert. Zwischen den beiden Datenfeldern wird automatisch das Wort `in` eingefügt. +
-Bei limango wird der Produktname also so angezeigt: `[Produktname] in [Farbwert]`
+Bei limango wird der Produktname also so angezeigt: +
+`[Produktname] in [Farbwert]`
 | Produkt
 
 3+^| Produkte
@@ -147,12 +149,12 @@ etc.)
 *Schuhe: Material Laufsohle*)
 | * Eigenschaften an Hauptvariante
 
-_Gültige Werte:_
+*_Gültige Werte:_*
 
-  ** sonstiges-material
-  ** leder
-  ** beschichtetes-leder
-  ** textil
+  ** `sonstiges-material`
+  ** `leder`
+  ** `beschichtetes-leder`
+  ** `textil`
 | Produkt
 
 3+^| Produktvarianten
@@ -259,7 +261,7 @@ _oder_
 
 | Brutto-Verkaufspreis +
 (_Pflichtfeld_)
-| * *Verkaufspreis » [Verkaufspreis für Herkunft limango wählen]*
+| * *Verkaufspreis » [Verkaufspreis für Herkunft limango wählen]* +
 Wenn nötig Ausweichdatenfeld hinzufügen.
 | Variante
 
@@ -349,7 +351,7 @@ _oder_
 
 * Werte einer Varianteneigenschaft *Farbe*
 
-_Wenn nötig Abstufungen derselben Farbe als Ausweichdatenfeld hinzufügen:_
+*_Wenn nötig Abstufungen derselben Farbe als Ausweichdatenfeld hinzufügen:_*
 
 Der Farbwert entspricht dem Farbfilter im limango-Shop. limango unterscheidet dabei nur nach Farben, nicht nach Farbabstufungen. Wenn du also zum Beispiel ein Kleid in den Farben Hellgrün und Dunkelgrün anbietest, werden beide Varianten angezeigt, wenn Kund:innen auf dem Marktplatz nach grünen Kleidern suchen.
 
