--- a/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
@@ -353,9 +353,10 @@ _oder_
 
 *_Wenn nötig Abstufungen derselben Farbe als Ausweichdatenfeld hinzufügen:_*
 
-Der Farbwert entspricht dem Farbfilter im limango-Shop. limango unterscheidet dabei nur nach Farben, nicht nach Farbabstufungen. Wenn du also zum Beispiel ein Kleid in den Farben Hellgrün und Dunkelgrün anbietest, werden beide Varianten angezeigt, wenn Kund:innen auf dem Marktplatz nach grünen Kleidern suchen.
+Der Farbwert entspricht dem Farbfilter im limango-Shop. limango unterscheidet dabei nur nach Farben, nicht nach Farbabstufungen. +
+*_Beispiel:_* Du bietest ein Kleid in den Farben Hellgrün und Dunkelgrün an. Beide Varianten werden angezeigt, wenn Kund:innen auf dem Marktplatz nach grünen Kleidern suchen.
 
-Damit für Varianten mit verschiedenen Farbabstufungen verschiedene Produkte auf limango erstellt werden, wird für Händler-Produkt-ID und Produktname nicht der limango-Farbwert exportiert, sondern der in plentymarkets gespeicherte Wert.
+Damit für Varianten mit verschiedenen Farbabstufungen verschiedene Produkte auf limango erstellt werden, wird für Händler-Produkt-ID und Produktname nicht der limango-Farbwert exportiert. Stattdessen wird der in plentymarkets gespeicherte Wert exportiert.
 
 [.collapseBox]
 .*_Beispiel:_* Dem limango-Farbwert *grün* verschiedene Grüntöne zuordnen
