--- a/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
+++ b/docs/de-de/modules/maerkte/partials/limango-recommended-mappings.adoc
@@ -354,7 +354,7 @@ _oder_
 *_Wenn nötig Abstufungen derselben Farbe als Ausweichdatenfeld hinzufügen:_*
 
 Der Farbwert entspricht dem Farbfilter im limango-Shop. limango unterscheidet dabei nur nach Farben, nicht nach Farbabstufungen. +
-*_Beispiel:_* Du bietest ein Kleid in den Farben Hellgrün und Dunkelgrün an. Beide Varianten werden angezeigt, wenn Kund:innen auf dem Marktplatz nach grünen Kleidern suchen.
+*_Beispiel:_* Du bietest ein Kleid in den Farben Hellgrün und Dunkelgrün an. Wenn Kund:innen auf dem Marktplatz nach grünen Kleidern suchen, werden beide Varianten angezeigt.
 
 Damit für Varianten mit verschiedenen Farbabstufungen verschiedene Produkte auf limango erstellt werden, wird für Händler-Produkt-ID und Produktname nicht der limango-Farbwert exportiert. Stattdessen wird der in plentymarkets gespeicherte Wert exportiert.
 
