--- a/docs/de-de/modules/maerkte/pages/limango.adoc
+++ b/docs/de-de/modules/maerkte/pages/limango.adoc
@@ -599,7 +599,7 @@ include::partial$catalogue-filters.adoc[]
 
 Nachdem du alle Datenfelder zugeordnet hast, kannst du die ersten fünf Datenzeilen des Exports über die Vorschaufunktion testen.
 
-include::daten:page$standardformate-exportieren.adoc[catalogue-preview]
+include::daten:page$standardformate-exportieren.adoc[tag=catalogue-preview]
 
 [#904]
 === Katalog aktivieren
